{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 98,
  "lineage": "7f1f5545-bdb8-2c14-168b-c81d048fd539",
  "resources": [
    {
      "module": "module.my_ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bdcc6c05dec346bf",
            "arn": "arn:aws:ec2:us-east-2:020046395185:instance/i-0aae44553e4cbc9f3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "snapshot_id": "snap-0ab1aa2109eddf758",
                "volume_id": "vol-050b964cf891c4bf4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "test_profile-dev",
            "id": "i-0aae44553e4cbc9f3",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "wahaj(webserver)",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07724e9b20f420f2d",
            "private_dns": "ip-13-0-1-195.us-east-2.compute.internal",
            "private_ip": "13.0.1.195",
            "public_ip": "3.128.255.191",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-050b964cf891c4bf4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0b8bc539e5f626465"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0a206f0eed1412ac0",
            "tags": {
              "Name": "wahaj-Webserver-dev"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b8bc539e5f626465"
            ]
          },
          "dependencies": [
            "module.db.aws_db_instance.default",
            "module.db.aws_db_subnet_group.db_subnet_group",
            "module.db.aws_security_group.db_sg",
            "module.my_ec2.aws_iam_instance_profile.test_profile",
            "module.my_ec2.aws_iam_role.test_role",
            "module.my_ec2.aws_security_group.ec2_sg",
            "module.my_vpc.aws_subnet.public_subnet",
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:020046395185:internet-gateway/igw-074cc00d1555eed53",
            "id": "igw-074cc00d1555eed53",
            "owner_id": "020046395185",
            "tags": {
              "Name": "VPC IGW-dev"
            },
            "vpc_id": "vpc-0b3aeb100d710fd5e"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web_public_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0aac4bbed3cadaee1",
            "owner_id": "020046395185",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-074cc00d1555eed53",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PublicSubnetRT-dev"
            },
            "vpc_id": "vpc-0b3aeb100d710fd5e"
          },
          "dependencies": [
            "module.my_vpc.aws_internet_gateway.gw",
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web-public-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cbc0e56e1f371b17",
            "route_table_id": "rtb-0aac4bbed3cadaee1",
            "subnet_id": "subnet-0a206f0eed1412ac0"
          },
          "dependencies": [
            "module.my_vpc.aws_internet_gateway.gw",
            "module.my_vpc.aws_route_table.web_public_rt",
            "module.my_vpc.aws_subnet.public_subnet",
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:020046395185:security-group/sg-089bc63209203902d",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-089bc63209203902d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "incoming for ec2-instance",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b8bc539e5f626465"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db-sg",
            "name_prefix": "",
            "owner_id": "020046395185",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db-sg-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b3aeb100d710fd5e"
          },
          "dependencies": [
            "module.my_ec2.aws_security_group.ec2_sg",
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:020046395185:security-group/sg-0b8bc539e5f626465",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b8bc539e5f626465",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "incoming for ec2-instance",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ec2-sg-dev",
            "name_prefix": "",
            "owner_id": "020046395185",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b3aeb100d710fd5e"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:020046395185:subnet/subnet-0795c7dacb2f41978",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "13.0.3.0/24",
            "id": "subnet-0795c7dacb2f41978",
            "map_public_ip_on_launch": false,
            "owner_id": "020046395185",
            "tags": {
              "Name": "PrivateSubnet-1-dev"
            },
            "vpc_id": "vpc-0b3aeb100d710fd5e"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:020046395185:subnet/subnet-0d8551b4a576b02c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "13.0.4.0/24",
            "id": "subnet-0d8551b4a576b02c4",
            "map_public_ip_on_launch": false,
            "owner_id": "020046395185",
            "tags": {
              "Name": "PrivateSubnet-2-dev"
            },
            "vpc_id": "vpc-0b3aeb100d710fd5e"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:020046395185:subnet/subnet-0a206f0eed1412ac0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "13.0.1.0/24",
            "id": "subnet-0a206f0eed1412ac0",
            "map_public_ip_on_launch": false,
            "owner_id": "020046395185",
            "tags": {
              "Name": "PublicSubnet-1-dev"
            },
            "vpc_id": "vpc-0b3aeb100d710fd5e"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:020046395185:subnet/subnet-00025ecd29fa9b8c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "13.0.2.0/24",
            "id": "subnet-00025ecd29fa9b8c8",
            "map_public_ip_on_launch": false,
            "owner_id": "020046395185",
            "tags": {
              "Name": "PublicSubnet-2-dev"
            },
            "vpc_id": "vpc-0b3aeb100d710fd5e"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:020046395185:vpc/vpc-0b3aeb100d710fd5e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "13.0.0.0/16",
            "default_network_acl_id": "acl-0e1d618a4b73be448",
            "default_route_table_id": "rtb-01cec4e2226b2f7ad",
            "default_security_group_id": "sg-05f7d426b1e398af4",
            "dhcp_options_id": "dopt-1536fe7e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0b3aeb100d710fd5e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01cec4e2226b2f7ad",
            "owner_id": "020046395185",
            "tags": {
              "Name": "wahaj-vpc-dev"
            }
          }
        }
      ]
    }
  ]
}